--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,52 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(114, 170, 170);
+}
+
+#wrapper {
+    margin-top: 4em;
+    display: flex;
+    justify-content: center;
+}
+
+#field {
+    border: 1px solid black;
+    padding-inline: 3em;
+    padding-block: 1em;
+    background-color: rgb(221, 198, 192);
+    opacity: 70%;
+    margin-right: 1em;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+}
+
+#submit {
+    border: none;
+    padding-inline: 1em;
+    background-color: darkslategrey;
+    border-radius: 10px;
+    color: cornsilk;
+    transition: 0.3s;
+}
+
+#submit:hover {
+    padding-inline: 1.5em;
+}
 
 #map {
     height: 100vh;
+    margin: 5em;
+    border-radius: 15px;
+    border: 1px solid gray;
+}
+
+#error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: red;
+    margin-left: 1em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
